// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance: metrics evaluates valid input (with lcp from all frames) correctly 1`] = `
Object {
  "cumulativeLayoutShift": undefined,
  "cumulativeLayoutShiftMainFrame": undefined,
  "firstContentfulPaint": 863,
  "firstContentfulPaintAllFrames": 683,
  "firstContentfulPaintAllFramesTs": 23466705983,
  "firstContentfulPaintTs": 23466886143,
  "firstMeaningfulPaint": 863,
  "firstMeaningfulPaintTs": 23466886143,
  "interactive": 863,
  "interactiveTs": 23466886143,
  "largestContentfulPaint": 863,
  "largestContentfulPaintAllFrames": 683,
  "largestContentfulPaintAllFramesTs": 23466705983,
  "largestContentfulPaintTs": 23466886143,
  "maxPotentialFID": 16,
  "observedCumulativeLayoutShift": undefined,
  "observedCumulativeLayoutShiftMainFrame": undefined,
  "observedDomContentLoaded": 596,
  "observedDomContentLoadedTs": 23466619325,
  "observedFirstContentfulPaint": 863,
  "observedFirstContentfulPaintAllFrames": 683,
  "observedFirstContentfulPaintAllFramesTs": 23466705983,
  "observedFirstContentfulPaintTs": 23466886143,
  "observedFirstMeaningfulPaint": 863,
  "observedFirstMeaningfulPaintTs": 23466886143,
  "observedFirstPaint": 616,
  "observedFirstPaintTs": 23466639588,
  "observedFirstVisualChange": 609,
  "observedFirstVisualChangeTs": 23466632130,
  "observedLargestContentfulPaint": 863,
  "observedLargestContentfulPaintAllFrames": 683,
  "observedLargestContentfulPaintAllFramesTs": 23466705983,
  "observedLargestContentfulPaintTs": 23466886143,
  "observedLastVisualChange": 5881,
  "observedLastVisualChangeTs": 23471904130,
  "observedLoad": 673,
  "observedLoadTs": 23466696096,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 23466023130,
  "observedSpeedIndex": 1583,
  "observedSpeedIndexTs": 23467605703,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 23466023130,
  "observedTotalCumulativeLayoutShift": undefined,
  "observedTraceEnd": 6006,
  "observedTraceEndTs": 23472029453,
  "speedIndex": 1583,
  "speedIndexTs": 23467606130,
  "totalBlockingTime": 0,
  "totalCumulativeLayoutShift": undefined,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 2289,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 2758,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 4671,
  "interactiveTs": undefined,
  "largestContentfulPaint": 2758,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 1336,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 1513,
  "observedDomContentLoadedTs": 713038536140,
  "observedFirstContentfulPaint": 1122,
  "observedFirstContentfulPaintAllFrames": 1122,
  "observedFirstContentfulPaintAllFramesTs": 713038144775,
  "observedFirstContentfulPaintTs": 713038144775,
  "observedFirstMeaningfulPaint": 1122,
  "observedFirstMeaningfulPaintTs": 713038144775,
  "observedFirstPaint": 1122,
  "observedFirstPaintTs": 713038144775,
  "observedFirstVisualChange": 1105,
  "observedFirstVisualChangeTs": 713038128064,
  "observedLargestContentfulPaint": 1122,
  "observedLargestContentfulPaintAllFrames": 1122,
  "observedLargestContentfulPaintAllFramesTs": 713038144775,
  "observedLargestContentfulPaintTs": 713038144775,
  "observedLastVisualChange": 1722,
  "observedLastVisualChangeTs": 713038745064,
  "observedLoad": 2159,
  "observedLoadTs": 713039182071,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 713037023064,
  "observedSpeedIndex": 1393,
  "observedSpeedIndexTs": 713038416494,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 713037023064,
  "observedTotalCumulativeLayoutShift": 0,
  "observedTraceEnd": 7416,
  "observedTraceEndTs": 713044439102,
  "speedIndex": 3681,
  "speedIndexTs": undefined,
  "totalBlockingTime": 1205,
  "totalCumulativeLayoutShift": 0,
}
`;

exports[`Performance: metrics evaluates valid input correctly (throttlingMethod=provided) 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 499,
  "firstContentfulPaintAllFrames": 499,
  "firstContentfulPaintAllFramesTs": 225414670885,
  "firstContentfulPaintTs": 225414670885,
  "firstMeaningfulPaint": 783,
  "firstMeaningfulPaintTs": 225414955343,
  "interactive": 1582,
  "interactiveTs": 225415754204,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 198,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintAllFrames": 499,
  "observedFirstContentfulPaintAllFramesTs": 225414670885,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTotalCumulativeLayoutShift": 0,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 605,
  "speedIndexTs": 225414777015,
  "totalBlockingTime": 48,
  "totalCumulativeLayoutShift": 0,
}
`;

exports[`Performance: metrics evaluates valid input correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 1337,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1553,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 4348,
  "interactiveTs": undefined,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 396,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintAllFrames": 499,
  "observedFirstContentfulPaintAllFramesTs": 225414670885,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTotalCumulativeLayoutShift": 0,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 1676,
  "speedIndexTs": undefined,
  "totalBlockingTime": 777,
  "totalCumulativeLayoutShift": 0,
}
`;
